; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/mediatek/extr_pinctrl-mtk-common-v2.c_mtk_pinconf_bias_disable_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/mediatek/extr_pinctrl-mtk-common-v2.c_mtk_pinconf_bias_disable_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_pinctrl = type { i32 }
%struct.mtk_pin_desc = type { i32 }

@PINCTRL_PIN_REG_PU = common dso_local global i32 0, align 4
@PINCTRL_PIN_REG_PD = common dso_local global i32 0, align 4
@MTK_ENABLE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtk_pinconf_bias_disable_get(%struct.mtk_pinctrl* %0, %struct.mtk_pin_desc* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtk_pinctrl*, align 8
  %6 = alloca %struct.mtk_pin_desc*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.mtk_pinctrl* %0, %struct.mtk_pinctrl** %5, align 8
  store %struct.mtk_pin_desc* %1, %struct.mtk_pin_desc** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.mtk_pinctrl*, %struct.mtk_pinctrl** %5, align 8
  %12 = load %struct.mtk_pin_desc*, %struct.mtk_pin_desc** %6, align 8
  %13 = load i32, i32* @PINCTRL_PIN_REG_PU, align 4
  %14 = call i32 @mtk_hw_get_value(%struct.mtk_pinctrl* %11, %struct.mtk_pin_desc* %12, i32 %13, i32* %8)
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %10, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %10, align 4
  store i32 %18, i32* %4, align 4
  br label %41

19:                                               ; preds = %3
  %20 = load %struct.mtk_pinctrl*, %struct.mtk_pinctrl** %5, align 8
  %21 = load %struct.mtk_pin_desc*, %struct.mtk_pin_desc** %6, align 8
  %22 = load i32, i32* @PINCTRL_PIN_REG_PD, align 4
  %23 = call i32 @mtk_hw_get_value(%struct.mtk_pinctrl* %20, %struct.mtk_pin_desc* %21, i32 %22, i32* %9)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = load i32, i32* %10, align 4
  store i32 %27, i32* %4, align 4
  br label %41

28:                                               ; preds = %19
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* @MTK_ENABLE, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %36, label %32

32:                                               ; preds = %28
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* @MTK_ENABLE, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %32, %28
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %4, align 4
  br label %41

39:                                               ; preds = %32
  %40 = load i32*, i32** %7, align 8
  store i32 1, i32* %40, align 4
  store i32 0, i32* %4, align 4
  br label %41

41:                                               ; preds = %39, %36, %26, %17
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @mtk_hw_get_value(%struct.mtk_pinctrl*, %struct.mtk_pin_desc*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
